# sila_cetoni_motioncontrol

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  MotionControl_client.py  MotionControl_server.py  MotionControl_testclient.py  README.md  pyproject.toml  service_description.json  setup.cfg  setup.py
axis/: MANIFEST.in  setup.py
axis/AxisPositionController/: AxisPositionController_client.py  AxisPositionController_default_arguments.py  AxisPositionController_real.py  AxisPositionController_servicer.py  AxisPositionController_simulation.py  __init__.py
axis/AxisPositionController/gRPC/: AxisPositionController_pb2.py  AxisPositionController_pb2_grpc.py
axis/AxisSystemControlService/: AxisSystemControlService_client.py  AxisSystemControlService_default_arguments.py  AxisSystemControlService_real.py  AxisSystemControlService_servicer.py  AxisSystemControlService_simulation.py
axis/AxisSystemControlService/gRPC/: AxisSystemControlService_pb2.py  AxisSystemControlService_pb2_grpc.py
axis/AxisSystemPositionController/: AxisSystemPositionController_client.py  AxisSystemPositionController_default_arguments.py  AxisSystemPositionController_defined_errors.py  AxisSystemPositionController_real.py  AxisSystemPositionController_servicer.py  AxisSystemPositionController_simulation.py
axis/AxisSystemPositionController/gRPC/: AxisSystemPositionController_pb2.py  AxisSystemPositionController_pb2_grpc.py
axis/PositionController/: PositionController_default_arguments.py  PositionController_real.py  PositionController_servicer.py  PositionController_simulation.py
axis/PositionController/gRPC/: PositionController_pb2.py  PositionController_pb2_grpc.py
axis/axis_service/: server.py
axis/axis_service/feature_implementations/: axispositioncontroller_impl.py  axissystemcontrolservice_impl.py  axissystempositioncontroller_impl.py
sila_cetoni/motioncontrol/: __init__.py
sila_cetoni/motioncontrol/axis/features/: AxisPositionController.sila.xml  AxisSystemControlService.sila.xml  AxisSystemPositionController.sila.xml
sila_cetoni/motioncontrol/axis/sila/axis_service/: __main__.py  server.py
sila_cetoni/motioncontrol/axis/sila/axis_service/feature_implementations/: axispositioncontroller_impl.py  axissystemcontrolservice_impl.py  axissystempositioncontroller_impl.py
sila_cetoni_motioncontrol/axis/sila/axis_service/feature_implementations/: axissystempositioncontroller_impl.py
