[project]
name = "sila_cetoni_motioncontrol"
description = "SiLA 2 implementations for CETONI Motioncontrol devices"
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "CETONI GmbH", email = "info@cetoni.de" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.8"
dependencies = [
    "coloredlogs",
    # only for debugging the AxisSystemPositionController's positioning shape
    # matplotlib
    # most recent numpy has an issue with fmod on Windows 10 (2004)
    # see https://developercommunity.visualstudio.com/t/fmod-after-an-update-to-windows-2004-is-causing-a/1207405
    "numpy==1.19.3",
    "shapely",
    "sila2[codegen]==0.10.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

# [project.scripts]
# sila-cetoni = "sila_cetoni.motioncontrol:main"

[project.urls]
"Homepage" = "https://cetoni.de/cobomation/#sila"
"SiLA Standard" = "https://sila-standard.org"

# dynamic version from git
[tool.setuptools_scm]
# include timestamp for dirty workdir versions
local_scheme = "node-and-timestamp"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.sila.xml"]

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
