[metadata]
name = sila_cetoni_motioncontrol
version = 1.0.0
author = CETONI GmbH
author_email = info@cetoni.de
description = SiLA 2 implementations for CETONI Motioncontrol devices
long_description_content_type = text/markdown
url = https://cetoni.de/cobomation/#sila
project_urls =
    SiLA Standard = https://sila-standard.org
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.7
install_requires =
    black
    # cetoni-sdk
    coloredlogs
    isort
    # only for debugging the AxisSystemPositionController's positioning shape
    # matplotlib
    # most recent numpy has an issue with fmod on Windows 10 (2004)
    # see https://developercommunity.visualstudio.com/t/fmod-after-an-update-to-windows-2004-is-causing-a/1207405
    numpy==1.19.3
    shapely
    sila2
include_package_data = True

[options.package_data]
* =
    *.sila.xml

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    sila-cetoni-motioncontrol = sila_cetoni.motioncontrol:main
